--- a/index.html
+++ b/index.html
@@ -695,16 +695,20 @@
                                     <div class="accordion-title">
                                         <h2><span>01</span> Strategy </h2>
                                         <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
+                                            <i class="arrow-icon-large">
+                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                    viewBox="0 0 269 266" style="enable-background:new 0 0 269 266;"
+                                                    xml:space="preserve">
+
+                                                    <g id="Слой_2">
+                                                        <g id="Capa_1">
+                                                            <polygon class="st0"
+                                                                points="21.1,6 21.1,48.7 189.6,48.7 6,232.3 36.2,262.4 219.8,78.9 219.8,247.4 262.4,247.4 262.4,6 		" />
                                                         </g>
                                                     </g>
-                                                </svg> </i>
+                                                </svg>
+                                            </i>
                                         </figure>
                                     </div>
                                     <div class="cont">
@@ -742,16 +746,20 @@
                                         <h2><span>02</span>Design
                                         </h2>
                                         <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
+                                            <i class="arrow-icon-large">
+                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                    viewBox="0 0 269 266" style="enable-background:new 0 0 269 266;"
+                                                    xml:space="preserve">
+
+                                                    <g id="Слой_2">
+                                                        <g id="Capa_1">
+                                                            <polygon class="st0"
+                                                                points="21.1,6 21.1,48.7 189.6,48.7 6,232.3 36.2,262.4 219.8,78.9 219.8,247.4 262.4,247.4 262.4,6 		" />
                                                         </g>
                                                     </g>
-                                                </svg> </i>
+                                                </svg>
+                                            </i>
                                             </svg>
                                         </figure>
                                     </div>
@@ -782,16 +790,20 @@
                                     <div class="accordion-title">
                                         <h2><span>03</span>Technology</h2>
                                         <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
+                                            <i class="arrow-icon-large">
+                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                    viewBox="0 0 269 266" style="enable-background:new 0 0 269 266;"
+                                                    xml:space="preserve">
+
+                                                    <g id="Слой_2">
+                                                        <g id="Capa_1">
+                                                            <polygon class="st0"
+                                                                points="21.1,6 21.1,48.7 189.6,48.7 6,232.3 36.2,262.4 219.8,78.9 219.8,247.4 262.4,247.4 262.4,6 		" />
                                                         </g>
                                                     </g>
-                                                </svg> </i>
+                                                </svg>
+                                            </i>
                                         </figure>
                                     </div>
                                     <div class="cont">
@@ -821,16 +833,19 @@
                                     <div class="accordion-title">
                                         <h2><span>04</span>Marketing</h2>
                                         <figure>
-                                            <i class="arrow-icon-large"> <svg xmlns="http://www.w3.org/2000/svg"
-                                                    viewBox="0 0 256.44 256.44">
-                                                    <g id="Слой_2" data-name="Слой 2">
-                                                        <g id="Capa_1" data-name="Capa 1">
-                                                            <polygon
-                                                                points="15.09 0 15.09 42.69 183.58 42.69 0 226.27 30.17 256.44 213.75 72.86 213.75 241.36 256.44 241.36 256.44 0 15.09 0">
-                                                            </polygon>
+                                            <i class="arrow-icon-large">
+                                                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                    viewBox="0 0 269 266" style="enable-background:new 0 0 269 266;"
+                                                    xml:space="preserve">
+
+                                                    <g id="Слой_2">
+                                                        <g id="Capa_1">
+                                                            <polygon class="st0"
+                                                                points="21.1,6 21.1,48.7 189.6,48.7 6,232.3 36.2,262.4 219.8,78.9 219.8,247.4 262.4,247.4 262.4,6 		" />
                                                         </g>
                                                     </g>
-                                                </svg> </i>
+                                                </svg></i>
                                             </svg>
                                         </figure>
                                     </div>
@@ -997,7 +1012,7 @@
 
                                     <!--Project-->
                                     <div class="ar-work" data-tilt data-tilt-glare="true" data-tilt-max="30"
-                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-bespin">
+                                        data-tilt-speed="20" data-cursor-text="View" data-cursor="-color-ystart">
                                         <!--Project URL-->
                                         <a href="">
                                             <!--Project Image-->
@@ -1384,7 +1399,7 @@
 
 
 
-    <script src="/assets/vendors/lib/plugins.js"></script>
+    <script src="./assets/vendors/lib/plugins.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
