--- a/services.html
+++ b/services.html
@@ -337,9 +337,12 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            UX Consultancy, Digital Strategy, Competitor Analysis, Industry Analysis,
-                                            User
-                                            Research, Campaign Planning and Digital Transformation Consulting.
+                                            We Offer: Digital Advisory and Consulting, Integrated Digital Marketing Plan
+                                            (D.M.P.), User Experience Development, Customer Experience Strategy,
+                                            Consumer Research, Insights & Target Market Analysis, Digital Capabilities
+                                            Development, Persona Design & Customer Segmentation, Competitive Analysis &
+                                            Industry Insights, Brand & Content Strategy, Digital Marketing and Website
+                                            Performance Audit.
                                         </span>
                                     </p>
                                     <span>
@@ -370,10 +373,10 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            UI Design, Responsive Web Design, Interface Design, User Flow Mapping,
-                                            Wireframing & Prototyping, Design Systems, Animations, Illustrations,
-                                            Experience
-                                            Mapping, Visual Design and UI Kits.
+                                            We Offer: User Interface Design, User Experience Design, Responsive Web
+                                            Design, Mobile App Design, Digital Interface Design, Design Systems
+                                            Creation, Experience Mapping, User Flow Mapping, Wireframing & Prototyping,
+                                            Illustrations & Animations, Visual Designs, and UI Kits.
                                         </span>
                                     </p>
                                     <span>
@@ -394,11 +397,12 @@
                                 </h3>
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
-                                        <span>Front-End Development, Web Applications, E-Commerce Platforms, Native &
-                                            Hybrid
-                                            Mobile Apps, Dynamic Websites, Functional & UA Testing and System
-                                            Integrations,
-                                            Support & Maintenance.</span>
+                                        <span>We Offer: Front-End Development, Native & Hybrid Mobile Application
+                                            Development, Progressive Web Applications, Database Design & Management,
+                                            Cloud Infrastructure Services, Testing & Automation TECH STACK - HTML, CSS,
+                                            Sass, Less, JavaScript, jQuery, GSAP, Vue, React, React Native, Ionic,
+                                            Flutter, NodeJS, Spring, JAVA, Grails, Hibernate, MySQL, PostgreSQL, Oracle,
+                                            Mongo, AWS and Google Cloud</span>
                                     </p>
                                     <span>
                                         <div class="en-form-submit">
@@ -427,10 +431,10 @@
                                 <div class="content-p" data-scroll data-scroll-offset="100">
                                     <p>
                                         <span>
-                                            Search Engine Optimisation, Social Media Management, Influencer Management,
-                                            Media
-                                            Planning & Buying, Auction Media Management, Content Curation & Online
-                                            Reputation Management.
+                                            We Offer: Social Media Management, Content Creation & Curation, Search
+                                            Engine Optimisation, Influencer Management, Auction Media Management, Online
+                                            Reputation Management, Media Planning & Buying, Marketing Automation, Email
+                                            Marketing, Conversion Rate Optimisation, Website & SEO Analysis.
                                         </span>
                                     </p>
                                     <span>
@@ -450,9 +454,9 @@
                                 OUR APPROACH
                             </span></h2>
                     </div>
-                    <div class="container text_anim">
+                    <div class="container " data-scroll="">
                         <div class="approach-lis">
-                            <div class="flex-con">
+                            <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">
                                             01
@@ -468,7 +472,7 @@
                                             strategy.</span></p>
                                 </div>
                             </div>
-                            <div class="flex-con">
+                            <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">02</span></h6>
                                 </div>
@@ -481,7 +485,7 @@
                                         </span></p>
                                 </div>
                             </div>
-                            <div class="flex-con">
+                            <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">03</span></h6>
                                 </div>
@@ -497,8 +501,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="approach-lis m-0">
-                            <div class="flex-con">
+                        <div class="approach-lis m-0" data-scroll="">
+                            <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">04</span></h6>
                                 </div>
@@ -510,7 +514,7 @@
                                         </span></p>
                                 </div>
                             </div>
-                            <div class="flex-con">
+                            <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">05</span></h6>
                                 </div>
