--- a/strategy.html
+++ b/strategy.html
@@ -320,30 +320,43 @@
                 <!-- content -->
                 <section class="ser-c">
                     <div class="container">
-                        <div class="flex-con align-center ">
-                            <div class="left-d">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                        <div class="flex-con align-center " data-scroll="">
+                            <div class="left-d text_anim">
+                                <p data-scroll="">
+                                    <span>
+                                        <span class="qou"> <img
+                                                src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                                        </span>
+                                        At Enigma, strategic planning based on insight is the starting point of
+                                        everything
+                                        we do. We consider a sound Digital Strategy to be the backbone of every brand’s
+                                        online presence. Using a blend of strategic thinking, broad marketing
+                                        experience,
+                                        insights, proven best practices, and sound judgment, we create effective
+                                        marketing
+                                        strategies that transform insights into actionable plans to deliver measurable
+                                        results.
                                     </span>
-                                    At Enigma, strategic planning based on insight is the starting point of everything
-                                    we do. We consider a sound Digital Strategy to be the backbone of every brand’s
-                                    online presence. Using a blend of strategic thinking, broad marketing experience,
-                                    insights, proven best practices, and sound judgment, we create effective marketing
-                                    strategies that transform insights into actionable plans to deliver measurable
-                                    results.
                                 </p>
                             </div>
-                            <div class="right">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">It
-                                    It Our digital strategy development process is thorough, enlightening and
-                                    stimulating, helping you find insights and clarity along the way. Our analysts,
-                                    planners and researchers’ approach is to begin by consulting with you. After all, no
-                                    one can know more about your product & brand better than you! We gain as much
-                                    insight and understanding as possible during the early stages, taking in data from
-                                    wherever necessary. Thereafter, we determine the message you are trying to send to
-                                    your audience, your product, the market and the competition. This forms the basis of
-                                    our strategic thinking, idea generation, experience planning, communication and
-                                    campaign plans.
+                            <div class="right text_anim">
+                                <p data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                                    <span>
+                                        It
+                                        It Our digital strategy development process is thorough, enlightening and
+                                        stimulating, helping you find insights and clarity along the way. Our analysts,
+                                        planners and researchers’ approach is to begin by consulting with you. After
+                                        all, no
+                                        one can know more about your product & brand better than you! We gain as much
+                                        insight and understanding as possible during the early stages, taking in data
+                                        from
+                                        wherever necessary. Thereafter, we determine the message you are trying to send
+                                        to
+                                        your audience, your product, the market and the competition. This forms the
+                                        basis of
+                                        our strategic thinking, idea generation, experience planning, communication and
+                                        campaign plans.
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -352,9 +365,11 @@
 
                 <!-- Scroll Section -->
                 <div class="scroll-sec2" data-scroll data-humcolor="#fff">
-                    <div class="back-text text_anim">
-                        <h1 data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal"><span>Approach &
-                                Process</span></h1>
+                    <div class="back-text">
+                        <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
+                            <span>Approach &
+                                Process</span>
+                        </h1>
                     </div>
                     <div class="container text_anim">
                         <h2><span>
@@ -382,7 +397,7 @@
                                 <img src="/assets/resources/img/Service-elements/Strategy-image-1.png" alt="" />
                             </figure>
                         </div>
-                        <h2 class="bo-h">
+                        <h2 class="bo-h text_anim">
                             <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
                                 data-scroll-speed="8 ">
                             <span>
@@ -393,43 +408,50 @@
                         </h2>
                     </div>
                     <section id="sectionPin" class="serv">
-                        <div class="pin-wrap">
-                            <div class="item" data-text="01">
+                        <div class="pin-wrap" data-scroll>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="01">
                                 <h4>GATHERING INSIGHTS</h4>
                                 <p>As strategic thinkers, every one of our engagements starts with a review of known
                                     challenges and an assessment of which outcomes will define success. This phase
                                     aligns the stakeholders and clarifies the central problem to be solved.</p>
                             </div>
-                            <div class="item" data-text="02">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="02">
                                 <h4>AUDIENCE MAPPING</h4>
                                 <p>We combine your audience data with our own online audience insights to help you
                                     better understand our audience’s thoughts, feelings and behaviours to reach the
                                     right audiences.</p>
                             </div>
-                            <div class="item" data-text="03">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="03">
                                 <h4>Competition Mapping</h4>
                                 <p>We thoroughly analyse market trends and competitor performance to identify where
                                     market opportunities exist within your business sector and how to best
                                     capitalise on them.</p>
                             </div>
-                            <div class="item" data-text="04">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="04">
                                 <h4>Brand Position Mapping</h4>
                                 <p>We collaborate with you to develop a new brand positioning, proposition or
                                     refresh an existing one.
                                 </p>
                             </div>
-                            <div class="item" data-text="05">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="05">
                                 <h4>Touchpoint/Journey Mapping</h4>
                                 <p>We map your audience’s online behaviour and digital touchpoints to define the
                                     consumer journey.</p>
                             </div>
-                            <div class="item" data-text="06">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="06">
                                 <h4>Roadmap & Integration</h4>
                                 <p>We’ll work with you to implement the right integrated strategy by integrating the
                                     insights we’ve gathered in previous steps to create a comprehensive roadmap that
                                     is not just channel-specific.</p>
                             </div>
-                            <div class="item" data-text="07">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="07">
                                 <h4>Implementation & Improvisation</h4>
                                 <p>All set? Time to test the waters and improve on any gaps along the way to
                                     accomplish each and every goal.</p>
@@ -480,9 +502,9 @@
                             </div>
                         </div>
                     </section>
-                    <div class="container text_anim">
+                    <div class="container text_anim" data-scroll>
 
-                        <h2 class="bo-h" style="margin-top: -5%;"><span>
+                        <h2 class="bo-h " style="margin-top: -5%;"><span>
                                 With extensive research, meticulous planning & a detailed understanding of your
                                 product/services and your business goals, we create the perfect strategy that builds
                                 meaningful online experiences across multiple channels that help your customers quickly
@@ -493,15 +515,19 @@
 
                 <!-- End -->
 
-                <section class="ser-c get-in">
+                <section class="ser-c get-in" data-scroll="">
                     <div class="container">
                         <div class="flex-con align-center ">
-                            <div class="left-d">
-                                <h2 class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    Want to get your digital strategy right?</h2>
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    Powerful and actionable digital strategies designed for impactful experiences. Great
-                                    products & campaigns start with the right plan.
+                            <div class="left-d text_anim">
+                                <h2>
+                                    <span>
+                                        Want to get your digital strategy right?
+                                    </span>
+                                </h2>
+                                <p>
+                                    <span> Powerful and actionable digital strategies designed for impactful
+                                        experiences. Great
+                                        products & campaigns start with the right plan.</span>
                                 </p>
                             </div>
                             <div class="right">
@@ -525,33 +551,56 @@
                             <span>Our unique approach has helped us become one of the world’s most influential digital
                                 strategy consultancies. Our digital strategy & planning services include:</span>
                         </h2>
-                        <ul class="point">
-                            <li>Digital Advisory and Consulting</li>
-                            <li>User Experience Development</li>
-                            <li>Integrated Digital Marketing Plan (D.M.P.)</li>
-                            <li>Brand & content strategy</li>
-                            <li>Persona design & customer segmentation</li>
-                            <li>Customer Experience Strategy</li>
-                            <li>Consumer research, insights &
-                                target market analysis</li>
-                            <li>Digital Capabilities Development</li>
-                            <li>Digital Marketing and Website
-                                Performance Audit</li>
-                            <li>User Experience Development</li>
+                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                            <li><span>
+                                    Digital Advisory and Consulting
+                                </span></li>
+                            <li><span>
+                                    User Experience Development
+                                </span></li>
+                            <li><span>
+                                    Integrated Digital Marketing Plan (D.M.P.)
+                                </span></li>
+                            <li><span>
+                                    Brand & content strategy
+                                </span></li>
+                            <li><span>
+                                    Persona design & customer segmentation
+                                </span></li>
+                            <li><span>
+                                    Customer Experience Strategy
+                                </span></li>
+                            <li><span>
+                                    Consumer research, insights &
+                                    target market analysis
+                                </span></li>
+                            <li><span>
+                                    Digital Capabilities Development
+                                </span></li>
+                            <li><span>
+                                    Digital Marketing and Website
+                                    Performance Audit
+                                </span></li>
+                            <li><span>
+                                    User Experience Development
+                                </span></li>
                         </ul>
                     </div>
                 </section>
-                <section class="last" data-bgcolor="#fff" data-humcolor="#000" data-textcolor="#000">
-                    <p class="opacity-0 gr-b" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                        They say a winning strategy is hard to come by. We at Enigma Digital are changing that belief,
-                        <span>one client at a time!</span>
-                    </p>
+                <section class="last" data-bgcolor="#fff" data-humcolor="#000" data-textcolor="#000" data-scroll="">
+                    <div class="text_anim">
+                        <p class=" gr-b">
+                            <span>They say a winning strategy is hard to come by. We at Enigma Digital are changing that
+                                belief,<b class="grd">one client at a time!</b></span>
+
+                        </p>
+                    </div>
                 </section>
                 <!-- Marquee -->
                 <section class="marquees" style="background: transparent;">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
-                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+                            data-cursor-text="Contact Us" data-cursor="-color-white -lg">
 
                             <div class="marquees__part">
                                 LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
@@ -622,7 +671,7 @@
                                         </li>
                                         <li>
                                             <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
