--- a/technology-development.html
+++ b/technology-development.html
@@ -276,7 +276,7 @@
         </div>
     </header>
 
-    <main role="main" id="main">
+    <main role="main" id="main" style="background:#fff;">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
@@ -299,13 +299,18 @@
                     <div class="el5 el-bg"></div>
                     <div class="el6 el-bg"></div>
                     <div class="top-h" data-scroll>
-                        <h1 class="text-rveal"><span>Technology</span></h1>
-                        <h1 class="text-end text-rveal"><span>Development</span></h1>
+                        <h1 class="text-rveal"><span class="header_title_line"><span>
+                                    Technology
+                                </span></span>
+                            <span class="h1-r header_title_line"><span>
+                                    Development
+                                </span>
+                        </h1>
                         <!-- <div class="element">Why do you need design?</div> -->
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         A design-led approach to product development that leverages cutting-edge technologies & agile
                         methodology, committed to putting you on a path to success in the ever-changing technological
@@ -315,28 +320,41 @@
                 <!-- content -->
                 <section class="ser-c">
                     <div class="container">
-                        <div class="flex-con align-center ">
-                            <div class="left-d">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                        <div class="flex-con align-center " data-scroll="">
+                            <div class="left-d text_anim">
+                                <p>
+                                    <span>
+                                        <span class="qou"> <img
+                                                src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                                        </span>
+                                        Technology has transformed the way businesses around the globe operate. Mobility
+                                        being at the core of digital transformation has helped businesses to take
+                                        advantage
+                                        of contextual and real-time data in reaching out to customers, employees and
+                                        partners. For the generation that is always mobile, companies have to think
+                                        ‘connectedness across ecosystems’ to create products that meet customer needs
+                                        and
+                                        ensure that their product positions itself for future success.
                                     </span>
-                                    Technology has transformed the way businesses around the globe operate. Mobility
-                                    being at the core of digital transformation has helped businesses to take advantage
-                                    of contextual and real-time data in reaching out to customers, employees and
-                                    partners. For the generation that is always mobile, companies have to think
-                                    ‘connectedness across ecosystems’ to create products that meet customer needs and
-                                    ensure that their product positions itself for future success.
                                 </p>
                             </div>
-                            <div class="right">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">It
-                                    Our eagerness to bring new ideas to life and our expertise in managing innovative
-                                    projects from inception to market introduction is what ties your product to sales,
-                                    marketing and financial growth. Being fully conversant with the software development
-                                    lifecycle and using our ‘design-led engineering’ approach, we help our client
-                                    partners reduce cost, speed time to market and build applications that are visually
-                                    pleasing, intuitive and reflect the changing technological landscape. We also engage
-                                    in mid-life product enhancements & integrations.
+                            <div class="right text_anim">
+                                <p>
+                                    <span>
+                                        It
+                                        Our eagerness to bring new ideas to life and our expertise in managing
+                                        innovative
+                                        projects from inception to market introduction is what ties your product to
+                                        sales,
+                                        marketing and financial growth. Being fully conversant with the software
+                                        development
+                                        lifecycle and using our ‘design-led engineering’ approach, we help our client
+                                        partners reduce cost, speed time to market and build applications that are
+                                        visually
+                                        pleasing, intuitive and reflect the changing technological landscape. We also
+                                        engage
+                                        in mid-life product enhancements & integrations.
+                                    </span>
                                 </p>
                             </div>
                         </div>
@@ -344,7 +362,7 @@
                 </section>
 
                 <!-- Scroll Section -->
-                <div class="scroll-sec2" data-scroll data-humcolor="#fff">
+                <div class="scroll-sec2" data-scroll data-humcolor="#000">
                     <div class="back-text text_anim">
                         <h1 data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal"><span>Technology
                                 Development</span></h1>
@@ -376,7 +394,7 @@
                                 <img src="/assets/resources/img/Service-elements/Strategy-image-1.png" alt="" />
                             </figure>
                         </div>
-                        <h2 class="bo-h">
+                        <h2 class="bo-h text_anim">
                             <img src="/assets/resources/img/Service-elements/sun-icon.svg" data-scroll=""
                                 data-scroll-speed="8 ">
                             <span>
@@ -386,44 +404,51 @@
                             </span>
                         </h2>
                     </div>
-                    <section class="ser-two">
-                        <div class="item" data-text="01">
+                    <section class="ser-two" data-scroll="">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="01">
                             <h2>
                                 <span>FRONT-END DEVELOPMENT</span>
                             </h2>
                             <p>HTML, CSS, JavaScript, jQuery, Angular, React, Vue, GSAP</p>
                         </div>
-                        <div class="item mar-top" data-text="02">
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="02">
                             <h2>
                                 <span>NATIVE & PROGRESSIVE WEB APPLICATIONS</span>
                             </h2>
                             <p>Grails, Node, Java, Spring, Hibernate, Ruby, Apache Maven</p>
                         </div>
-                        <div class="item" data-text="03">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="03">
                             <h2>
                                 <span>DATABASE</span>
                             </h2>
                             <p>MySQL, PostgreSQL, Oracle, Mongo, Couch, Cassandra, HBase</p>
                         </div>
-                        <div class="item mar-top" data-text="04">
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="04">
                             <h2>
                                 <span>MOBILE APPLICATIONS</span>
                             </h2>
                             <p>iOS, Android</p>
                         </div>
-                        <div class="item" data-text="05">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="05">
                             <h2>
                                 <span>INFRASTRUCTURE SERVICES</span>
                             </h2>
                             <p>Amazon Web Services, Microsoft Azure, Google Cloud</p>
                         </div>
-                        <div class="item mar-top" data-text="06">
+                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="06">
                             <h2>
                                 <span>HYBRID</span>
                             </h2>
                             <p>Ionic, React Native, Flutter, Xamarin, Phone Gap, Apache Cordova, Intel® XDK</p>
                         </div>
-                        <div class="item" data-text="07">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="07">
                             <h2>
                                 <span>TESTING & AUTOMATION</span>
                             </h2>
@@ -454,7 +479,7 @@
                 <section class="marquees" style="background: transparent;">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
-                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+                            data-cursor-text="Contact Us" data-cursor="-color-white -lg">
 
                             <div class="marquees__part">
                                 LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
@@ -492,7 +517,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -525,7 +550,7 @@
                                         </li>
                                         <li>
                                             <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -779,7 +804,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
