--- a/about.html
+++ b/about.html
@@ -2128,26 +2128,29 @@
                     </section>
                     <!-- Marquee -->
                     <section class="marquees" style="background: transparent;">
-                        <div class="marquees__inner" aria-hidden="true" ref="inner">
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                        <a href="#">
+                            <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
+                                data-cursor="-color-white -lg">
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
+                                <div class="marquees__part">
+                                    VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
+                                </div>
                             </div>
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
-                            </div>
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
-                            </div>
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
-                            </div>
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
-                            </div>
-                            <div class="marquees__part">
-                                VIEW OUR WORK <img src="/assets/resources/img/footer-circle-white.svg" alt="" />
-                            </div>
-                        </div>
+                        </a>
                     </section>
                 </div>
 
