--- a/interface-design.html
+++ b/interface-design.html
@@ -276,7 +276,7 @@
         </div>
     </header>
 
-    <main role="main" id="main">
+    <main role="main" id="main" style="background: #fff;">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
@@ -299,13 +299,18 @@
                     <div class="el5 el-bg"></div>
                     <div class="el6 el-bg"></div>
                     <div class="top-h" data-scroll>
-                        <h1 class="text-rveal"><span>Interface</span></h1>
-                        <h1 class="h1-r text-rveal text-center"><span>Design</span></h1>
+                        <h1 class="text-rveal"><span class="header_title_line"><span>
+                                    Interface
+                                </span></span>
+                            <span class="h1-r header_title_line"><span>
+                                    Design
+                                </span>
+                        </h1>
                         <!-- <div class="element">Why do you need design?</div> -->
                     </div>
                 </section>
                 <!-- sec -->
-                <section class="bol-prh" data-humcolor="#000" data-textcolor="#000">
+                <section class="bol-prh heigh_100" data-humcolor="#000" data-textcolor="#000">
                     <p class="opacity-0 p-s" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                         We bridge the gap between the physical & digital world to build delightful & intuitive
                         experiences that increase revenues, conversion rates and customer loyalty. As they say –
@@ -315,25 +320,29 @@
                 <!-- content -->
                 <section class="ser-c">
                     <div class="container">
-                        <div class="flex-con align-center ">
-                            <div class="left-d">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
-                                    <span> <img src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                        <div class="flex-con align-center " data-scroll="">
+                            <div class="left-d text_anim">
+                                <p><span>
+                                        <span class="qou"> <img
+                                                src="/assets/resources/img/Service-elements/quote-icon.svg" alt="" />
+                                        </span>
+                                        Leveraging the power of modern tools and our unique approach, we solve complex
+                                        design problems through user research, expert analysis, prototyping and
+                                        collaborative design with users & stakeholders.
                                     </span>
-                                    Leveraging the power of modern tools and our unique approach, we solve complex
-                                    design problems through user research, expert analysis, prototyping and
-                                    collaborative design with users & stakeholders.
                                 </p>
                             </div>
-                            <div class="right">
-                                <p class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">It
-                                    When designing digital interfaces, the journey for us starts in the split second
-                                    when a customer lands or interacts with any of your digital properties. By
-                                    understanding the needs of your users and your business goals, we approach the
-                                    design process with an emotionally balanced human-centric approach. This enables us
-                                    to create a smooth-running process with a number of linked steps that help us
-                                    deliver simple, stunning and usercentric designs that engage your customers and
-                                    boost your conversion rates as a by-product.
+                            <div class="right text_anim">
+                                <p>
+                                    <span>It
+                                        When designing digital interfaces, the journey for us starts in the split second
+                                        when a customer lands or interacts with any of your digital properties. By
+                                        understanding the needs of your users and your business goals, we approach the
+                                        design process with an emotionally balanced human-centric approach. This enables
+                                        us
+                                        to create a smooth-running process with a number of linked steps that help us
+                                        deliver simple, stunning and usercentric designs that engage your customers and
+                                        boost your conversion rates as a by-product.</span>
                                 </p>
                             </div>
                         </div>
@@ -341,10 +350,12 @@
                 </section>
 
                 <!-- Scroll Section -->
-                <div class="scroll-sec2" data-scroll data-humcolor="#fff">
+                <div class="scroll-sec2" data-scroll data-humcolor="#000">
                     <div class="back-text text_anim">
-                        <h1 data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal"><span>Interface
-                                Design</span></h1>
+                        <h1 class="opacity-0" data-scroll="" data-scroll-speed="9" data-scroll-direction="horizontal">
+                            <span>Interface
+                                Design</span>
+                        </h1>
                     </div>
                     <div class="container text_anim">
                         <h2><span>
@@ -377,7 +388,8 @@
                     </div>
                     <section id="sectionPin">
                         <div class="pin-wrap">
-                            <div class="item" data-text="01">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="01">
                                 <h4>RESEARCH</h4>
                                 <p>(Building the understanding of your business as our own) - We begin at the most
                                     fundamental level. We conduct thorough research to gather information about your
@@ -385,7 +397,8 @@
                                     that matters - your company’s vision, the product, its purpose, its U.S.P.s, your
                                     target audience and the business expectations.</p>
                             </div>
-                            <div class="item" data-text="02">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="02">
                                 <h4>DISCOVERY</h4>
                                 <p>(Understanding the goals & challenges) - We then sit with you for an extensive
                                     discovery session to understand your business goals, challenges and pain points
@@ -393,13 +406,15 @@
                                     which parts of your current interface are working and which are not. This will help
                                     us create a plan of action tailored to your needs.</p>
                             </div>
-                            <div class="item" data-text="03">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="03">
                                 <h4>Storyboards</h4>
                                 <p>(Customer Journey Mapping) - We develop ideas based on our findings in the research &
                                     discovery phase. We identify the core functionality of your product, define use
                                     cases and build storyboards for each use case.</p>
                             </div>
-                            <div class="item" data-text="04">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="04">
                                 <h4>Wire-framing & Prototyping </h4>
                                 <p>(Defining the UX flow) - We create wireframes that help us visualise how a user will
                                     interact with your website or application. Using tools like Adobe XD, Figma,
@@ -408,13 +423,71 @@
                                     your interface before the actual designing process begins.
                                 </p>
                             </div>
-                            <div class="item" data-text="05">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="05">
                                 <h4>TVisual/U.I. Design</h4>
                                 <p>(Designing the Interface) - We present design strategies that include various colour
                                     schemes, style tiles, collections of typography, navigation structure, & call to
                                     actions that convey your brand identity and message to your target audience.</p>
                             </div>
-                            <div class="item" data-text="06">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="06">
+                                <h4>Refinement</h4>
+                                <p>(Usability Testing & User Feedback) - We conduct user-testing sessions and perform a
+                                    detailed analysis on the pre-established KPIs to understand the areas of improvement
+                                    and the aberration from the desirable effect on the target audience. We then analyse
+                                    all the collected data and synthesise our findings into actionable design
+                                    improvements to further enhance your product.
+                                </p>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="sectionPin2" class="serv">
+                        <div class="pin-wrap">
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="01">
+                                <h4>RESEARCH</h4>
+                                <p>(Building the understanding of your business as our own) - We begin at the most
+                                    fundamental level. We conduct thorough research to gather information about your
+                                    industry, your company and its products and services. We want to know everything
+                                    that matters - your company’s vision, the product, its purpose, its U.S.P.s, your
+                                    target audience and the business expectations.</p>
+                            </div>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="02">
+                                <h4>DISCOVERY</h4>
+                                <p>(Understanding the goals & challenges) - We then sit with you for an extensive
+                                    discovery session to understand your business goals, challenges and pain points
+                                    you’re trying to solve through design. We’ll also look at the data that tells us
+                                    which parts of your current interface are working and which are not. This will help
+                                    us create a plan of action tailored to your needs.</p>
+                            </div>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="03">
+                                <h4>Storyboards</h4>
+                                <p>(Customer Journey Mapping) - We develop ideas based on our findings in the research &
+                                    discovery phase. We identify the core functionality of your product, define use
+                                    cases and build storyboards for each use case.</p>
+                            </div>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="04">
+                                <h4>Wire-framing & Prototyping </h4>
+                                <p>(Defining the UX flow) - We create wireframes that help us visualise how a user will
+                                    interact with your website or application. Using tools like Adobe XD, Figma,
+                                    InVision and even pencil & paper, we include all features and structural assumptions
+                                    as rough sketches. This process is highly critical as it broadly defines the flow of
+                                    your interface before the actual designing process begins.
+                                </p>
+                            </div>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="05">
+                                <h4>TVisual/U.I. Design</h4>
+                                <p>(Designing the Interface) - We present design strategies that include various colour
+                                    schemes, style tiles, collections of typography, navigation structure, & call to
+                                    actions that convey your brand identity and message to your target audience.</p>
+                            </div>
+                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                                data-scroll-direction="horizontal" data-text="06">
                                 <h4>Refinement</h4>
                                 <p>(Usability Testing & User Feedback) - We conduct user-testing sessions and perform a
                                     detailed analysis on the pre-established KPIs to understand the areas of improvement
@@ -451,7 +524,7 @@
                                 give our designs the neuro-marketing edge. Our design service offerings include:
                             </span>
                         </p>
-                        <ul class="point">
+                        <ul class="point opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                             <li>User Interface Design</li>
                             <li>Experience Mapping</li>
                             <li>User Experience Design</li>
@@ -472,7 +545,7 @@
                 <section class="marquees" style="background: transparent;">
                     <a href="#">
                         <div class="marquees__inner black-strock" aria-hidden="true" ref="inner"
-                            data-cursor-text="Contact Us" data-cursor="-color-white -xlg">
+                            data-cursor-text="Contact Us" data-cursor="-color-white -lg">
 
                             <div class="marquees__part">
                                 LETS WORK TOGETHER<img src="/assets/resources/img/footer-circle.svg" alt="" />
@@ -510,7 +583,7 @@
                             </div>
                         </div>
                         <div class="footer-flex">
-                      <div class="footer-right">
+                            <div class="footer-right">
                                 <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
                                         class="cb-outro-social-item-title"><span
                                             data-text="About">About</span></span></a>
@@ -543,7 +616,7 @@
                                         </li>
                                         <li>
                                             <a href="" class="face"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -797,7 +870,7 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-   
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
